samples/_failures_safe/1761161237_7d6894_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4eeb84b8.c: In function ‘main’:
./samples/SAFE/__tmp_4eeb84b8.c:145:9: error: expected declaration or statement at end of input
  145 |         printf(" | Counter: %d | Buffer: %s\n", sm.context.counter, sm.context.buffer);
      |         ^~~~~~
./samples/SAFE/__tmp_4eeb84b8.c:145:9: error: expected declaration or statement at end of input
